# AIStack_Morning

./: NLP_spacy_nltk.ipynb  Prompt_Engineering.ipynb  README.md  Rouge_Bleu_Demo.ipynb  Transformers.ipynb  awesome_prompt.json  embedding_creation_similarlty.py  gradio-demo.py  gradio-upload-project.py  langchain_rag_demo.ipynb  langchain_rag_demo_gradio.ipynb  llm_intro.ipynb  main.py  ollama_embeddings.py  parse_data_doc.py  parse_data_pdf.py  parsed_pdf.csv  pyproject.toml  requirements.txt  vector_chroma.py  vector_stores_chroma.py  vector_stores_faiss.py
6.MCP/: intro_mcp.ipynb  mcp-client.py  mcp-server.py
chroma_langchain_db/: chroma.sqlite3
chroma_langchain_db1/: chroma.sqlite3
langchain_intro/: class_objects.ipynb  intro_pydantic.ipynb  langchain_agents.ipynb  langchain_basics.ipynb  langchain_memory.ipynb  langraph_agents.ipynb  simple_data_analysis_agent_notebook.ipynb
langsmith/: 01-demo_lagsmith.ipynb
multi_agent_rag/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  agents.py  app.py  demo_queries.py  graph.py  main.py  routing.py  state_schema.py  tools.py  vector_store_setup.py
multi_agent_rag/chroma_rag_db/: chroma.sqlite3
multi_agent_sql/: QUICK_START.md  README.md  __init__.py  agents.py  customer_service.db  database_setup.py  demo_queries.py  graph.py  main.py  routing.py  state_schema.py  tools.py
