[project]
name = "aistack4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bs4>=0.0.2",
    "evaluate>=0.4.6",
    "faiss-cpu>=1.13.2",
    "fastmcp>=3.1.0",
    "grandalf>=0.8",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.2.17",
    "langchain-experimental>=0.4.1",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "pandas>=2.3.3",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.6.0",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
